Revert Roku 6.1 fix, modify DLNA tests, fix Sonos icon url